# teste-Conectanuvem

./: .env.example  .gcloudignore  .gitignore  README.md  app.yaml  contact_parsing.py  env_variables.example.yaml  main.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: index.html
