[tool.poetry]
name = "teste-conectanuvem"
version = "0.1.0"
description = ""
authors = ["Luis Carlos <luiscarlosfirminopinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.17.0"
Flask-Dance = {extras = ["sqla"], version = "^3.3.1"}

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pylint = "^2.7.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
